--- a/index.html
+++ b/index.html
@@ -29,18 +29,18 @@
                         <svg class="icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
                             <path d="M13.339 7.219c1-1.057 2.464-1.74 4.063-1.74 2.078 0 3.938 1.203 4.917 2.943 0.844-0.401 1.802-0.604 2.802-0.604 3.802 0 6.88 3.12 6.88 6.964 0 3.839-3.083 6.958-6.901 6.958-0.458 0-0.917-0.057-1.359-0.141-0.859 1.563-2.5 2.604-4.401 2.604-0.802 0-1.542-0.203-2.198-0.5-0.88 2.057-2.922 3.495-5.302 3.495-2.479 0-4.599-1.557-5.401-3.755-0.359 0.078-0.719 0.099-1.099 0.099-2.938 0-5.339-2.401-5.339-5.401 0-2 1.078-3.74 2.677-4.677-0.339-0.76-0.521-1.604-0.521-2.464 0-3.438 2.802-6.198 6.203-6.198 2.042 0 3.797 0.938 4.958 2.401z"/>
                           </svg>                          
-                        <a href="https://trailblazer.me/id/demoraes">https://trailblazer.me/id/demoraes</a>
+                        <a href="https://trailblazer.me/id/demoraes" target="_blank">https://trailblazer.me/id/demoraes</a>
                     </div> <!-- ends links-item -->
                     <div class="links-item">
                         <svg class="icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/></svg>
-                        <a href="https://www.linkedin.com/in/fellipedemoraes">www.linkedin.com/in/fellipedemoraes</a>
+                        <a href="https://www.linkedin.com/in/fellipedemoraes" target="_blank">www.linkedin.com/in/fellipedemoraes</a>
                     </div>    <!-- ends links-item -->
                 </div> <!-- ends links -->
 
                 <div class="links">
                     <div class="links-item">
                         <svg class="icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/></svg>
-                        <a href="https://github.com/fddemora">https://github.com/fddemora</a>
+                        <a href="https://github.com/fddemora" target="_blank">https://github.com/fddemora</a>
                     </div> <!-- ends links-item-->
                     <div class="links-item">
                         <svg class="icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M20 22.621l-3.521-6.795c-.008.004-1.974.97-2.064 1.011-2.24 1.086-6.799-7.82-4.609-8.994l2.083-1.026-3.493-6.817-2.106 1.039c-7.202 3.755 4.233 25.982 11.6 22.615.121-.055 2.102-1.029 2.11-1.033z"/></svg>
