--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                       <a href="tel:123-456-7890">+1(862) 272-9972</a>
                     </div>
                     <div class="links-item">
-                        <svg class="icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 12.713l-11.985-9.713h23.971l-11.986 9.713zm-5.425-1.822l-6.575-5.329v12.501l6.575-7.172zm10.85 0l6.575 7.172v-12.501l-6.575 5.329zm-1.557 1.261l-3.868 3.135-3.868-3.135-8.11 8.848h23.956l-8.11-8.848z"/></svg>
+                        <svg class="icon" style="height:1.2em;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"><path d="M12 12.713l-11.985-9.713h23.971l-11.986 9.713zm-5.425-1.822l-6.575-5.329v12.501l6.575-7.172zm10.85 0l6.575 7.172v-12.501l-6.575 5.329zm-1.557 1.261l-3.868 3.135-3.868-3.135-8.11 8.848h23.956l-8.11-8.848z"/></svg>
                         <a href="mailto:Joshua.Bruce-Attah@cognizant.com">Joshua.Bruce-Attah@cognizant.com</a>
                       </div>
                 </div> <!-- end links -->
