--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
         <section>
             <div>
-                <img src="img/fellipe2.jpg" alt="avatar" class="avatar">
+                <img src="img/fellipe2-removebg-preview.png" alt="avatar" class="avatar">
             </div>
             <div>
                 <div class="my-name">Fellipe Demoraes</div>
