--- a/index.html
+++ b/index.html
@@ -119,15 +119,21 @@
                 <div class="skills-container">
                     <ul>
                         <li>Vlocity</li>
-                        <li>Lightning Web Components</li>
+                        <li>Salesforce LWC</li>
                         <li>Salesforce DX</li>
                         <li>Salesforce Apex</li>
                     </ul>
                     <ul>
                         <li>HTML5</li>
-                        <li>CSS3</li>
+                        <li>CSS3/SCSS</li>
                         <li>JavaScript (ES6)</li>
                         <li>Node JS</li>
+                    </ul>
+                    <ul>
+                        <li>Git/Github</li>
+                        <li>C/C++</li>
+                        <li>Java</li>
+                        <li>Python</li>
                     </ul>
                     <ul>
                         <li>Self-Motivation</li>
