--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@
             </div>
             <div>
                 <ul class="cert-list">
-                    <li>Salesforce JavaScript Developer I</li>
-                    <li>Salesforce Platform Developer I</li>
-                    <li>Salesforce Administrator</li>
-                    <li>Oracle Associate, Java SE 8 Programmer</li>
+                    <li><a href="./cert-html/js-cert.html" target="_blank">Salesforce JavaScript Developer I </a></li>
+                    <li><a href="./cert-html/pd1.html" target="_blank">Salesforce Platform Developer I</a></li>
+                    <li><a href="./cert-html/admin1.html" target="_blank">Salesforce Administrator</a></li>
+                    <li><a href="https://www.youracclaim.com/badges/e871fec7-4890-478d-bf76-450fe81cdca6/linked_in_profile" target="_blank">Oracle Associate, Java SE 8 Programmer</a></li>
                 </ul>
             </div>
         </section>
