created diploma link to bhcc

--- a/index.html
+++ b/index.html
@@ -169,12 +169,13 @@
                 <div class="job">
                     <div class="job-title-container">
                         <div>
-                            <div class="job-company">Bunker Hill Community College</div>
+                            <div class="job-company"><a href="./certs/college.png" target="_blank">Bunker Hill Community College</a></div>
                             <div class="job-title">Associates of Arts in Computer Science</div>
                         </div>
                         <div>January 2016 - May 2019</div>
                     </div> <!-- end job-title-container-->
                     <ul>
+                        <li>High Honors</li>
                         <li>3.8 GPA</li>
                     </ul>
                 </div> <!-- end job-->
