Fixed the image sizes

--- a/cert-html/admin1.html
+++ b/cert-html/admin1.html
@@ -5,8 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Cert Fellipe</title>
+    <link rel="stylesheet" href="cert-style.css" />
 </head>
 <body>
-    <img src="../certs/admin1.png" alt="Admin 1 Cert">
+  <div class="cert-image">
+      <img src="../certs/admin1.png" alt="Admin 1 Cert" class="cert-1">
+  </div>
 </body>
 </html>
