--- a/cert-html/js-cert.html
+++ b/cert-html/js-cert.html
@@ -5,8 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS Certication - Fellipe</title>
+    <link rel="stylesheet" href="cert-style.css" />
 </head>
 <body>
-    <img src="../certs/js-cert.png"  alt="JS Cert">
+  <div class="cert-image">
+      <img src="../certs/js-cert.png"  alt="JS Cert"class="cert-1">
+  </div>  
 </body>
 </html>
