--- a/index.html
+++ b/index.html
@@ -122,20 +122,24 @@
                         <li>Salesforce LWC</li>
                         <li>Salesforce DX</li>
                         <li>Salesforce Apex</li>
+                        <li>Visualforce</li>
                     </ul>
                     <ul>
                         <li>HTML5</li>
                         <li>CSS3/SCSS</li>
                         <li>JavaScript (ES6)</li>
                         <li>Node JS</li>
+                        <li>TypeScript</li>
                     </ul>
                     <ul>
                         <li>Git/Github</li>
+                        <li>JSON/XML</li>
                         <li>C/C++</li>
                         <li>Java</li>
                         <li>Python</li>
                     </ul>
                     <ul>
+                        <li>SQL</li>
                         <li>Self-Motivation</li>
                         <li>Responsibility</li>
                         <li>Teamwork</li>
