--- a/index.html
+++ b/index.html
@@ -50,14 +50,10 @@
                 viewBox="0 0 24 24"
               >
                 <path
-                  d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"
+                  d="M12 12.713l-11.985-9.713h23.971l-11.986 9.713zm-5.425-1.822l-6.575-5.329v12.501l6.575-7.172zm10.85 0l6.575 7.172v-12.501l-6.575 5.329zm-1.557 1.261l-3.868 3.135-3.868-3.135-8.11 8.848h23.956l-8.11-8.848z"
                 />
               </svg>
-              <a
-                href="https://www.linkedin.com/in/tamyres-portilho-demoraes"
-                target="_blank"
-                >www.linkedin.com/in/tamyres-portilho-demoraes</a
-              >
+              <a href="mailto:tamydemoraes@yahoo.com">tamydemoraes@yahoo.com</a>
             </div>
             <!-- ends links-item -->
           </div>
@@ -100,6 +96,8 @@
           <!-- ends links-->
 
           <div class="links">
+            
+
             <div class="links-item">
               <svg
                 class="icon"
@@ -109,10 +107,14 @@
                 viewBox="0 0 24 24"
               >
                 <path
-                  d="M12 12.713l-11.985-9.713h23.971l-11.986 9.713zm-5.425-1.822l-6.575-5.329v12.501l6.575-7.172zm10.85 0l6.575 7.172v-12.501l-6.575 5.329zm-1.557 1.261l-3.868 3.135-3.868-3.135-8.11 8.848h23.956l-8.11-8.848z"
+                  d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"
                 />
               </svg>
-              <a href="mailto:tamydemoraes@yahoo.com">tamydemoraes@yahoo.com</a>
+              <a
+                href="https://www.linkedin.com/in/tamyres-portilho-demoraes"
+                target="_blank"
+                >linkedin.com/in/tamyres-demoraes</a
+              >
             </div>
             <!-- ends links-item -->
           </div>
