--- a/index.html
+++ b/index.html
@@ -136,33 +136,30 @@
               viewBox="0 0 24 24"
             >
               <path
-                d="M24 22h-24v-15h24v15zm-15-20c-1.104 0-2 .896-2 2v2h2v-1.5c0-.276.224-.5.5-.5h5c.276 0 .5.224.5.5v1.5h2v-2c0-1.104-.896-2-2-2h-6z"
+                d="M20 12.875v5.068c0 2.754-5.789 4.057-9 4.057-3.052 0-9-1.392-9-4.057v-6.294l9 4.863 9-3.637zm-8.083-10.875l-12.917 5.75 12 6.5 11-4.417v7.167h2v-8.25l-12.083-6.75zm13.083 20h-4c.578-1 1-2.5 1-4h2c0 1.516.391 2.859 1 4z"
               />
             </svg>
-            Experience
+            Education
           </div>
         </div>
         <div>
           <div class="job">
             <div class="job-title-container">
               <div>
-                <div class="job-company">Au Pair</div>
-                <div class="job-title">Child Care</div>
+                <div class="job-company">Pontifícia Universidade Católica de Campinas</div>
+                <div class="job-title">
+                  Bachelor in Early Childhood Education
+                </div>
               </div>
-              <div>July 2018 - 2019</div>
+              <div>February 2014 - 2018</div>
             </div>
             <!-- end job-title-container-->
             <ul>
-              <li>
-                Taking care of children and giving them all suport as an Au
-                Pair;
-              </li>
-              <li>Assisting the children in their activities and homeworks;</li>
-              <li>
-                Helping children with painting, drawings and piano lessons.
-              </li>
+                <li>ECE: Equivalent of U.S. regional academic accreditation.</li>
             </ul>
+            
           </div>
+          <!-- end job-->
       </section>
 
       <section>
@@ -223,8 +220,10 @@
         <div>
           <div class="skills-container">
             <ul>
-              <li>Early Chilhood Education</li>
-              <li>Brazilian Sign Language</li>
+              <li>Responsibility</li>
+              <li>Communication</li>
+              <li>Portuguese</li>
+              <li>Organization</li>
             </ul>
             <ul>
               <li>HTML5</li>
@@ -260,30 +259,33 @@
               viewBox="0 0 24 24"
             >
               <path
-                d="M20 12.875v5.068c0 2.754-5.789 4.057-9 4.057-3.052 0-9-1.392-9-4.057v-6.294l9 4.863 9-3.637zm-8.083-10.875l-12.917 5.75 12 6.5 11-4.417v7.167h2v-8.25l-12.083-6.75zm13.083 20h-4c.578-1 1-2.5 1-4h2c0 1.516.391 2.859 1 4z"
+                d="M24 22h-24v-15h24v15zm-15-20c-1.104 0-2 .896-2 2v2h2v-1.5c0-.276.224-.5.5-.5h5c.276 0 .5.224.5.5v1.5h2v-2c0-1.104-.896-2-2-2h-6z"
               />
             </svg>
-            Education
+            Experience
           </div>
         </div>
         <div>
           <div class="job">
             <div class="job-title-container">
               <div>
-                <div class="job-company">Pontifícia Universidade Católica de Campinas</div>
-                <div class="job-title">
-                  Bachelor in Early Childhood Education
-                </div>
+                <div class="job-company">Au Pair</div>
+                <div class="job-title">Child Care</div>
               </div>
-              <div>February 2014 - 2018</div>
+              <div>July 2018 - 2019</div>
             </div>
             <!-- end job-title-container-->
             <ul>
-                <li>ECE: Equivalent of U.S. regional academic accreditation.</li>
+              <li>
+                Taking care of children and giving them all suport as an Au
+                Pair;
+              </li>
+              <li>Assisting the children in their activities and homeworks;</li>
+              <li>
+                Helping children with painting, drawings and piano lessons.
+              </li>
             </ul>
-            
           </div>
-          <!-- end job-->
       </section>
 
       <section>
@@ -307,10 +309,13 @@
             <ul>
                 <li>Violin</li>
                 <li>Organ/Keyboard</li>
-                <li>Volunteer Work/Community Involvement</li>
                 <li>Traveling</li>
-                <li>Salesforce</li>
               </ul>
+            <ul>
+                <li>Salesforce</li>
+                <li>Brazilian Sign Language</li>
+                <li>Volunteer Work/Community Involvement</li>
+            </ul>
         </div>
       </section>
 
