--- a/index.html
+++ b/index.html
@@ -18,11 +18,8 @@
     <div class="container">
       <section>
         <div>
-          <img src="img/tamy-2.png" alt="avatar" class="avatar" />
-        </div>
-        <div>
-          <div class="my-name">Tamyres Portilho Demoraes</div>
-          <div class="my-title">Salesforce Administrator</div>
+          <div class="my-name">Tamyres Priscila Portilho Demoraes</div>
+          <div class="my-title">Data Analyst</div>
           <div class="links">
             <div class="links-item">
               <svg
@@ -120,46 +117,9 @@
           </div>
           <!-- ends links-->
           <p>
-            A reliable professional working towards Salesforce certifications with experience in data management, security, objects, and automation.
+            A reliable professional working towards Data Analytics certifications with self experience in Python.
           </p>
         </div>
-      </section>
-
-      <section>
-        <div class="section-title">
-          <div class="icon-title">
-            <svg
-              class="icon icon-title-margin"
-              xmlns="http://www.w3.org/2000/svg"
-              width="16"
-              height="16"
-              viewBox="0 0 24 24"
-            >
-              <path
-                d="M20 12.875v5.068c0 2.754-5.789 4.057-9 4.057-3.052 0-9-1.392-9-4.057v-6.294l9 4.863 9-3.637zm-8.083-10.875l-12.917 5.75 12 6.5 11-4.417v7.167h2v-8.25l-12.083-6.75zm13.083 20h-4c.578-1 1-2.5 1-4h2c0 1.516.391 2.859 1 4z"
-              />
-            </svg>
-            Education
-          </div>
-        </div>
-        <div>
-          <div class="job">
-            <div class="job-title-container">
-              <div>
-                <div class="job-company">Pontifícia Universidade Católica de Campinas</div>
-                <div class="job-title">
-                  Bachelor in Early Childhood Education
-                </div>
-              </div>
-              <div>February 2014 - 2018</div>
-            </div>
-            <!-- end job-title-container-->
-            <ul>
-                <li>ECE: Equivalent of U.S. regional academic accreditation.</li>
-            </ul>
-            
-          </div>
-          <!-- end job-->
       </section>
 
       <section>
@@ -220,34 +180,64 @@
         <div>
           <div class="skills-container">
             <ul>
-              <li>Responsibility</li>
+              <li>Responsability</li>
               <li>Communication</li>
-              <li>Portuguese</li>
               <li>Organization</li>
+              <li>Problem Solving</li>
             </ul>
             <ul>
+              <li>Python</li>
               <li>HTML5</li>
               <li>CSS3</li>
               <li>JavaScript (ES6)</li>
-              <li>Salesforce</li>
             </ul>
             <ul>
+              <li>Salesforce</li>
               <li>Data Management</li>
               <li>Security</li>
-              <li>Objects</li>
-              <li>Automation</li>
-            </ul>
-            <ul>
-              <li>Reports/Dashboards</li>
-              <li>Sales Cloud</li>
-              <li>Service Cloud</li>
-              <li>Problem Solving</li>
+              <li>Swift</li>
             </ul>
           </div>
           <!-- end skills-container-->
         </div>
       </section>
 
+      <section>
+        <div class="section-title">
+          <div class="icon-title">
+            <svg
+              class="icon icon-title-margin"
+              xmlns="http://www.w3.org/2000/svg"
+              width="16"
+              height="16"
+              viewBox="0 0 24 24"
+            >
+              <path
+                d="M20 12.875v5.068c0 2.754-5.789 4.057-9 4.057-3.052 0-9-1.392-9-4.057v-6.294l9 4.863 9-3.637zm-8.083-10.875l-12.917 5.75 12 6.5 11-4.417v7.167h2v-8.25l-12.083-6.75zm13.083 20h-4c.578-1 1-2.5 1-4h2c0 1.516.391 2.859 1 4z"
+              />
+            </svg>
+            Education
+          </div>
+        </div>
+        <div>
+          <div class="job">
+            <div class="job-title-container">
+              <div>
+                <div class="job-company">Pontifícia Universidade Católica de Campinas</div>
+                <div class="job-title">
+                  Bachelor in Early Childhood Education
+                </div>
+              </div>
+              <div>February 2014 - 2018</div>
+            </div>
+            <!-- end job-title-container-->
+            <ul>
+                <li>ECE: Equivalent of U.S. regional academic accreditation.</li>
+            </ul>
+            
+          </div>
+          <!-- end job-->
+      </section>
       <section>
         <div class="section-title">
           <div class="icon-title">
@@ -312,7 +302,7 @@
                 <li>Traveling</li>
               </ul>
             <ul>
-                <li>Salesforce</li>
+                <li>Data Analytics</li>
                 <li>Brazilian Sign Language</li>
                 <li>Volunteer Work/Community Involvement</li>
             </ul>
