--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <section>
         <div>
           <div class="my-name">Tamyres Priscila Portilho Demoraes</div>
-          <div class="my-title">Data Analyst</div>
+          <div class="space"></div>
           <div class="links">
             <div class="links-item">
               <svg
@@ -117,7 +117,7 @@
           </div>
           <!-- ends links-->
           <p>
-            A reliable professional working towards Data Analytics certifications with self experience in Python.
+            A reliable professional working towards Data Analytics certifications with experience in Python.
           </p>
         </div>
       </section>
@@ -140,6 +140,11 @@
           </div>
         </div>
         <div>
+            <li>
+            <a href="https://www.credly.com/badges/ed09580d-912e-4779-8f5d-69fe17187968" target="_blank"
+              >[PCEP-30-02] PCEP – Certified Entry-Level Python Programmer</a
+            >
+            </li>
             <li>
               <a href="https://www.freecodecamp.org/certification/tamy23/javascript-algorithms-and-data-structures" target="_blank"
                 >JavaScript Algorithms and Data Structures (freeCodeCamp)</a
